feat: implement modules, reactive architecture, async safety, and documentation
- Add cotani-command, cotani-dialog, cotani-hud, cotani-nametag, cotani-redis
- Modernize Java 21+ idioms with Math.clamp across codebase
- Ensure strict null-safety, @NullMarked, and zero-flicker reactive updates
- Update documentation, cookbook recipes, architecture diagrams, and aggregated javadocs